[gd_scene load_steps=7 format=3 uid="uid://c5np808a7uc7b"]

[ext_resource type="Script" uid="uid://db6hmp34osh4m" path="res://desk_itens/morse_antenna.gd" id="1_gbc8i"]
[ext_resource type="PackedScene" uid="uid://c21y0bt4ev3vm" path="res://assets/models/Antenna.glb" id="2_8wwca"]
[ext_resource type="AudioStream" uid="uid://dkk0fepc61a3j" path="res://assets/sfx/dash.wav" id="3_hsbwd"]
[ext_resource type="AudioStream" uid="uid://c76sgyvfmxeuu" path="res://assets/sfx/dot.wav" id="4_6rc4h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ahd3f"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0, 0, 0.752941)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hsbwd"]
material = SubResource("StandardMaterial3D_ahd3f")
radius = 0.025
height = 0.075

[node name="MorseAntenna" type="Node3D"]
script = ExtResource("1_gbc8i")

[node name="Clock" type="Timer" parent="."]
wait_time = 0.3

[node name="Antena" parent="." instance=ExtResource("2_8wwca")]
transform = Transform3D(-12.425, 0, -0.00542002, 0, 12.425, 0, 0.00542002, 0, -12.425, -0.875595, 0, 0)

[node name="Light" type="MeshInstance3D" parent="Antena"]
transform = Transform3D(1, 0, -1.16415e-10, 0, 1, 0, 1.16415e-10, 0, 1, -0.0720244, 1.64712, 0.000170855)
mesh = SubResource("CapsuleMesh_hsbwd")

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="DashSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hsbwd")

[node name="DotSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6rc4h")

[connection signal="timeout" from="Clock" to="." method="_on_clock_timeout"]
